# xPackageManager

crates/xpm-core/: Cargo.toml
crates/xpm-flatpak/: Cargo.toml
crates/xpm-service/: Cargo.toml
crates/xpm-service/src/: state.rs
crates/xpm-ui/src/: main.rs
crates/xpm-ui/src/ui_helpers/: data.rs  mod.rs  runtime.rs  utils.rs
crates/xpm-ui/ui/: main.slint
packaging/: PKGBUILD  org.xpackagemanager.policy  x-alpm-package.xml  xpackagemanager.desktop
