[package]
name = "xpm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for xPackageManager"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono = { version = "0.4", features = ["serde"] }
