[package]
name = "xpm-flatpak"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Flatpak backend for xPackageManager"

[dependencies]
xpm-core.workspace = true
libflatpak.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
