[package]
name = "xpm-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Business logic and orchestration for xPackageManager"

[dependencies]
xpm-core.workspace = true
xpm-alpm.workspace = true
xpm-flatpak.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
